--- a/src/main/webapp/channel/channel_booking_past.xhtml
+++ b/src/main/webapp/channel/channel_booking_past.xhtml
@@ -826,6 +826,12 @@
                                         </p:commandButton>
                                         <p:commandButton value="All Doctor" action="channel_doctor_view_today" ajax="false" onclick="onSubmitButton();">                                        
                                         </p:commandButton>
+                                        <p:commandButton value="All Absent" action="channel_absent_view_today" actionListener="#{channelReportController.createTodayAbsentList()}" ajax="false" onclick="onSubmitButton();">     
+                                            <f:setPropertyActionListener value="#{bookingPastController.date}" target="#{channelReportController.date}"/>
+                                        </p:commandButton>
+                                        <p:commandButton value="All Cancel" action="channel_cancel_view_today" actionListener="#{channelReportController.createTodayCancelList()}" ajax="false" onclick="onSubmitButton();">  
+                                            <f:setPropertyActionListener value="#{bookingPastController.date}" target="#{channelReportController.date}"/>
+                                        </p:commandButton>
                                     </h:panelGrid>                                    
                                 </p:panel>
                             </h:panelGrid>
