--- a/src/main/webapp/channel/channel_nurse_view.xhtml
+++ b/src/main/webapp/channel/channel_nurse_view.xhtml
@@ -16,21 +16,23 @@
             <p:commandButton ajax="false" action="#{channelReportController.markAsAbsent()}" value="Mark Selected as Absent"  ></p:commandButton>
             <p:commandButton ajax="false" action="/channel/channel_booking" value="Back" ></p:commandButton>
             <p:panel id="nurseView" styleClass="noBorder summeryBorder">
-                <f:facet name="header">
-                    <h:panelGrid columns="2">
-                        <p:outputLabel value="Consultant"/>
-                        <p:outputLabel value="#{channelReportController.serviceSession.staff.person.nameWithTitle}"/>
-                        <p:outputLabel value="Date"/>
-                        <h:outputLabel value="#{channelReportController.serviceSession.sessionDate}" >
-                            <f:convertDateTime pattern="dd-MM-yyyy"/>
-                        </h:outputLabel>
-                        <p:outputLabel value="Session Name"/>
-                        <h:outputLabel value="#{channelReportController.serviceSession.name}" />
-                    </h:panelGrid>
-                </f:facet>
+
 
                 <p:dataTable value="#{channelReportController.nurseViewSessions}" selection="#{channelReportController.selectedBillSessions}" var="bs" rowKey="#{bs.id}">
-
+                    <f:facet name="header">
+                        <p:outputLabel value="#{sessionController.loggedUser.institution.name}" style="fon"/><br></br>
+                        <p:outputLabel value="#{sessionController.loggedUser.institution.address}"/><br></br>
+                        <p:outputLabel value="Nurse View"/>
+                        <br></br>
+                        <p:outputLabel value="Consultant : "/>
+                        <p:outputLabel value="#{channelReportController.serviceSession.staff.person.nameWithTitle}"/><br></br>
+                        <p:outputLabel value="Date : "/>
+                        <h:outputLabel value="#{channelReportController.serviceSession.sessionDate}" >
+                            <f:convertDateTime pattern="dd-MM-yyyy"/>
+                        </h:outputLabel><br></br>
+                        <p:outputLabel value="Session Name : "/>
+                        <h:outputLabel value="#{channelReportController.serviceSession.name}" />
+                    </f:facet>
                     <p:column headerText="No">
                         #{bs.serialNo}&nbsp;&nbsp;<p:inputText style="width: 20px;" rendered="#{sessionController.institutionPreference.applicationInstitution ne 'Cooperative'}"/>
                     </p:column>
