--- a/src/main/webapp/channel/channel_doctor_view_today.xhtml
+++ b/src/main/webapp/channel/channel_doctor_view_today.xhtml
@@ -33,7 +33,7 @@
                         </f:facet>
                         <p:outputLabel value="#{i+1}" />
                     </p:column>
-                    <p:column headerText="Consultant" style="width: 1000px!important;">
+                    <p:column headerText="Consultant" style="width: 1000px!important;" sortBy="#{bs.consultant.person.nameWithTitle}">
                         <f:facet name="header">
                             <p:outputLabel value="Consultant" style="float: left;"/>
                         </f:facet>
