--- a/src/main/webapp/channel/channel_reports.xhtml
+++ b/src/main/webapp/channel/channel_reports.xhtml
@@ -118,6 +118,7 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Today All My Booking Summery(Created Date)" action="/channel/channel_report_cashier_summery_date_created"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="All Bill Detail By Payment Methord" action="/channel/channel_report_by_bill_class_by_user_by_payment_methord" actionListener="#{channelReportController.clearAll}"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Channel Count By Users" action="/channel/report_cashier_vise_count" />
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Channel Count By Users(By Appoinment Date)" action="/channel/report_cashier_vise_count_1" />
                                     </h:panelGrid>
                                 </p:panel>
                             </h:panelGrid>
