--- a/src/main/webapp/reportCashier/report_cashier_detailed_by_user.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier_detailed_by_user.xhtml
@@ -70,7 +70,7 @@
 
                         </h:panelGrid>
 
-                        <ca:opdBilled id="opd_b" data="#{commonReport.userBillsOwn}"/>
+                        <ca:opdBilled data="#{commonReport.userBillsOwn}"/>
 
                         <p:spacer height="30"/>
 
