--- a/src/main/webapp/channel/institutions.xhtml
+++ b/src/main/webapp/channel/institutions.xhtml
@@ -31,7 +31,7 @@
                                             <f:ajax execute="txtSearch" render="lstSelect" event="keyup" listener="#{institutionController.fetchSelectedAgencys}" />
                                         </h:inputText>
 
-                                        <p:selectOneListbox  id="lstSelect"   value="#{institutionController.current}" style="min-width: 223px; height: 300px;">
+                                        <p:selectOneListbox  id="lstSelect"   value="#{institutionController.agency}" style="min-width: 223px; height: 300px;">
                                             <f:selectItems  value="#{institutionController.selectedAgencies}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
                                             <p:ajax event="change"   update="gpDetail" process="lstSelect" >
                                             </p:ajax>
@@ -61,63 +61,63 @@
                                             <h:panelGrid id="gpDetailText" columns="2">
 
                                                 <h:outputText id="lblId" value="Id" ></h:outputText>
-                                                <h:outputLabel id="txtId" value="#{institutionController.current.id}" />
+                                                <h:outputLabel id="txtId" value="#{institutionController.agency.id}" />
 
                                                 <h:outputText id="lblName" value="Name" ></h:outputText>
-                                                <h:inputText autocomplete="off" id="txtName" value="#{institutionController.current.name}"  ></h:inputText>
+                                                <h:inputText autocomplete="off" id="txtName" value="#{institutionController.agency.name}"  ></h:inputText>
 
                                                 <h:outputText id="lblChqPrnName" value="Cheque Printing Name" ></h:outputText>
-                                                <h:inputText autocomplete="off" id="txtChqPrnName" value="#{institutionController.current.chequePrintingName}"  ></h:inputText>
+                                                <h:inputText autocomplete="off" id="txtChqPrnName" value="#{institutionController.agency.chequePrintingName}"  ></h:inputText>
 
                                                 <h:outputText value="Code" >                                        
                                                 </h:outputText>
-                                                <h:inputText autocomplete="off"  value="#{institutionController.current.institutionCode}"  >
+                                                <h:inputText autocomplete="off"  value="#{institutionController.agency.institutionCode}"  >
                                                 </h:inputText> 
 
                                                 <h:outputText value="Descreption" >                                        
                                                 </h:outputText>
-                                                <h:inputTextarea  value="#{institutionController.current.descreption}"  >
+                                                <h:inputTextarea  value="#{institutionController.agency.descreption}"  >
                                                 </h:inputTextarea> 
 
                                                 <h:outputText id="lblType" value="Institution Type" ></h:outputText>
 
-                                                <h:outputText value="#{institutionController.current.institutionType}">
+                                                <h:outputText value="#{institutionController.agency.institutionType}">
                                                 </h:outputText>
 
                                                 <h:outputText value="Standerd Credit Limit" >                                        
                                                 </h:outputText>
-                                                <h:inputText autocomplete="off" disabled="true"  value="#{institutionController.current.standardCreditLimit}"  >
+                                                <h:inputText autocomplete="off" disabled="true"  value="#{institutionController.agency.standardCreditLimit}"  >
                                                 </h:inputText>
 
                                                 <h:outputText value="Allowed Credit Limit" >                                        
                                                 </h:outputText>
-                                                <h:inputText autocomplete="off" disabled="true"  value="#{institutionController.current.allowedCredit}"  >
+                                                <h:inputText autocomplete="off" disabled="true"  value="#{institutionController.agency.allowedCredit}"  >
                                                 </h:inputText>
 
                                                 <h:outputText value="Allowed Maximum Credit Limit" >                                        
                                                 </h:outputText>
-                                                <h:inputText autocomplete="off" disabled="true"  value="#{institutionController.current.maxCreditLimit}"  >
+                                                <h:inputText autocomplete="off" disabled="true"  value="#{institutionController.agency.maxCreditLimit}"  >
                                                 </h:inputText>
 
                                                 <h:outputText value="Balance" >                                        
                                                 </h:outputText>
-                                                <h:inputText autocomplete="off" disabled="true"  value="#{institutionController.current.ballance}">
+                                                <h:inputText autocomplete="off" disabled="true"  value="#{institutionController.agency.ballance}">
                                                 </h:inputText>
 
                                                 <h:outputText id="lblPhone" value="Phone" ></h:outputText>
-                                                <h:inputText autocomplete="off" id="txtPhone" value="#{institutionController.current.phone}"  ></h:inputText>
+                                                <h:inputText autocomplete="off" id="txtPhone" value="#{institutionController.agency.phone}"  ></h:inputText>
 
                                                 <h:outputText id="lblFax" value="Fax" ></h:outputText>
-                                                <h:inputText autocomplete="off" id="txtFax" value="#{institutionController.current.fax}"  ></h:inputText>
+                                                <h:inputText autocomplete="off" id="txtFax" value="#{institutionController.agency.fax}"  ></h:inputText>
 
                                                 <h:outputText id="lblEMail" value="Email" ></h:outputText>
-                                                <h:inputText autocomplete="off" id="txtEmail" value="#{institutionController.current.email}"  ></h:inputText>
+                                                <h:inputText autocomplete="off" id="txtEmail" value="#{institutionController.agency.email}"  ></h:inputText>
 
                                                 <h:outputText id="lblAdress" value="Adress" ></h:outputText>
-                                                <h:inputText autocomplete="off" id="txtAdress" value="#{institutionController.current.address}"  ></h:inputText>
+                                                <h:inputText autocomplete="off" id="txtAdress" value="#{institutionController.agency.address}"  ></h:inputText>
 
                                                 <h:outputText id="lblWeb" value="Web" ></h:outputText>
-                                                <h:inputText autocomplete="off" id="txtWeb" value="#{institutionController.current.web}"  ></h:inputText>
+                                                <h:inputText autocomplete="off" id="txtWeb" value="#{institutionController.agency.web}"  ></h:inputText>
 
 
                                             </h:panelGrid>
@@ -128,19 +128,19 @@
                                         <p:tab title="Contact Person Detail">
                                             <h:panelGrid id="gpContactPerson" columns="2">
                                                 <h:outputText value="Contact Person Name" ></h:outputText>
-                                                <h:inputText autocomplete="off"  value="#{institutionController.current.contactPerson.name}"  ></h:inputText>
+                                                <h:inputText autocomplete="off"  value="#{institutionController.agency.contactPerson.name}"  ></h:inputText>
 
                                                 <h:outputText value="Contact Person Tel" ></h:outputText>
-                                                <h:inputText autocomplete="off" value="#{institutionController.current.contactPerson.mobile}"  ></h:inputText>
+                                                <h:inputText autocomplete="off" value="#{institutionController.agency.contactPerson.mobile}"  ></h:inputText>
 
                                                 <h:outputText value="Contact Person Email" ></h:outputText>
-                                                <h:inputText autocomplete="off" value="#{institutionController.current.contactPerson.email}"  ></h:inputText>
+                                                <h:inputText autocomplete="off" value="#{institutionController.agency.contactPerson.email}"  ></h:inputText>
                                             </h:panelGrid>
                                         </p:tab>
                                     </p:tabView>
                                 </h:panelGrid>
                                 <h:panelGrid id="gpDetailButtons" columns="2">
-                                    <h:commandButton id="btnSave" value="Save" action="#{institutionController.saveSelected()}" styleClass="buttons">
+                                    <h:commandButton id="btnSave" value="Save" action="#{institutionController.saveSelectedAgency()}" styleClass="buttons">
                                     </h:commandButton>
                                     <p:defaultCommand target="btnSave"/>
                                 </h:panelGrid>
