--- a/src/main/webapp/resources/cashier/agentBill.xhtml
+++ b/src/main/webapp/resources/cashier/agentBill.xhtml
@@ -13,7 +13,7 @@
 
     <!-- IMPLEMENTATION -->
     <cc:implementation>
-        <p:dataTable id="agent" value="#{cc.attrs.data.bills}" var="b7"   sortBy="#{b7.billType}" rendered="#{cc.attrs.data.bills.size()>0}">
+        <p:dataTable id="#{cc.id}" value="#{cc.attrs.data.bills}" var="b7"   sortBy="#{b7.billType}" rendered="#{cc.attrs.data.bills.size()>0}">
             <f:facet name="header">  
                 <h:outputLabel value="Agent Payment Recieve"/>
             </f:facet> 
