--- a/src/main/webapp/resources/cashier/agentCancel.xhtml
+++ b/src/main/webapp/resources/cashier/agentCancel.xhtml
@@ -12,7 +12,7 @@
 
     <!-- IMPLEMENTATION -->
     <cc:implementation>
-        <p:dataTable id="agentCancel"  value="#{cc.attrs.data.bills}" var="b7"   sortBy="#{b7.billType}" rendered="#{cc.attrs.data.bills.size()>0}">
+        <p:dataTable id="#{cc.id}"  value="#{cc.attrs.data.bills}" var="b7"   sortBy="#{b7.billType}" rendered="#{cc.attrs.data.bills.size()>0}">
             <f:facet name="header">  
                 <h:outputLabel value="Agent Payment Cancel"/>
             </f:facet> 
