--- a/src/main/webapp/resources/cashier/inwardPaymentCancel.xhtml
+++ b/src/main/webapp/resources/cashier/inwardPaymentCancel.xhtml
@@ -13,7 +13,7 @@
 
     <!-- IMPLEMENTATION -->
     <cc:implementation>
-        <p:dataTable id="inwardCancel" value="#{cc.attrs.data.bills}" var="b"   sortBy="#{b.billType}" rendered="#{cc.attrs.data.bills.size()>0}" >
+        <p:dataTable id="#{cc.id}" value="#{cc.attrs.data.bills}" var="b"   sortBy="#{b.billType}" rendered="#{cc.attrs.data.bills.size()>0}" >
             <f:facet name="header">  
                 <h:outputLabel value="Inward Payments Cancel"/>
             </f:facet> 
