--- a/src/main/webapp/resources/cashier/opdCancelled.xhtml
+++ b/src/main/webapp/resources/cashier/opdCancelled.xhtml
@@ -14,7 +14,7 @@
 
     <!-- IMPLEMENTATION -->
     <cc:implementation>
-        <p:dataTable id="cancelled"  value="#{cc.attrs.data.bills}" var="b1"  rendered="#{cc.attrs.data.bills.size()>0}" >
+        <p:dataTable id="#{cc.id}"  value="#{cc.attrs.data.bills}" var="b1"  rendered="#{cc.attrs.data.bills.size()>0}" >
             <f:facet name="header">  
                 <h:outputLabel value="OPd Cancelled"/>
             </f:facet> 
