--- a/src/main/webapp/resources/cashier/pettyCancellSummery.xhtml
+++ b/src/main/webapp/resources/cashier/pettyCancellSummery.xhtml
@@ -13,7 +13,7 @@
 
     <!-- IMPLEMENTATION -->
     <cc:implementation>
-        <p:dataTable id="pettyCancel" rowStyleClass="noDisplayRow" value="#{cc.attrs.data.bills}" var="b4"   sortBy="#{b4.billType}" rendered="#{cc.attrs.data.bills.size()>0}" >
+        <p:dataTable id="#{cc.id}" rowStyleClass="noDisplayRow" value="#{cc.attrs.data.bills}" var="b4"   sortBy="#{b4.billType}" rendered="#{cc.attrs.data.bills.size()>0}" >
             <f:facet name="header">  
                 <h:outputLabel  value="Petty Cash Payment Cancel"/>
             </f:facet> 
