--- a/src/main/webapp/resources/cashier/pharmacyCancelled.xhtml
+++ b/src/main/webapp/resources/cashier/pharmacyCancelled.xhtml
@@ -13,7 +13,7 @@
 
     <!-- IMPLEMENTATION -->
     <cc:implementation>
-        <p:dataTable id="cancelledPh" styleClass="noBorder"  value="#{cc.attrs.data.bills}" var="b1Ph"  rendered="#{cc.attrs.data.bills.size()>0}" >
+        <p:dataTable id="#{cc.id}" styleClass="noBorder"  value="#{cc.attrs.data.bills}" var="b1Ph"  rendered="#{cc.attrs.data.bills.size()>0}" >
             <f:facet name="header">  
                 <h:outputLabel value="Pharmacy Cancelled"/>
             </f:facet> 
