--- a/src/main/webapp/reportLab/lab_summeries_index.xhtml
+++ b/src/main/webapp/reportLab/lab_summeries_index.xhtml
@@ -17,13 +17,14 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="1)Investigation Counts" action="investigation_counts"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="2)Turn Over Time Average" action="turn_over_time"/> 
                                         <p:commandButton styleClass="linkButton" ajax="false" value="3)Turn Over Time By Bills" action="turn_over_time_bills"/> 
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="4)Report by Collection Centre" action="report_lab_collection_centre.xhtml"/>
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="5)Report by Collection Centre Count" action="report_lab_by_collection_centre_investigation_count.xhtml"/>                            
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="6)Report by Referring Doctor" action="report_lab_by_refering_doctor.xhtml"/>
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="7)Report Summary Department" action="report_cashier_detailed_by_department.xhtml"/>
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="8)Report Summary by day" action="report_lab_by_date_summery.xhtml"/>
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="9)Investigation Summary Fee Type" action="report_investigation_summery_by_feetype"/>
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="10)Investigation Summary Regent Fee" action="report_investigation_summery_by_regent_fee"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="4)Report by Collection Centre(Detail)" action="report_lab_collection_centre.xhtml"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="5)Report by Collection Centre(Summery)" action="report_lab_collection_centre_summery.xhtml"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="6)Report by Collection Centre Count" action="report_lab_by_collection_centre_investigation_count.xhtml"/>                            
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="7)Report by Referring Doctor" action="report_lab_by_refering_doctor.xhtml"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="8)Report Summary Department" action="report_cashier_detailed_by_department.xhtml"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="9)Report Summary by day" action="report_lab_by_date_summery.xhtml"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="10)Investigation Summary Fee Type" action="report_investigation_summery_by_feetype"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="11)Investigation Summary Regent Fee" action="report_investigation_summery_by_regent_fee"/>
 
                                     </p:panelGrid>
                                 </p:panel>
