--- a/src/main/webapp/lab_reports.xhtml
+++ b/src/main/webapp/lab_reports.xhtml
@@ -61,8 +61,8 @@
                         </p:panel>
 
                         <p:panel header="Check Entered Data" styleClass="alignTop">
-                             <p:commandButton styleClass="linkButton" ajax="false" value="Investigation List" action="lab_investigation_list" onclick="onSubmitButton();" />
-                            <p:commandButton styleClass="linkButton" ajax="false" value="Investigation Fee List" action="lab_investigation_list" onclick="onSubmitButton();" />
+                             <p:commandButton styleClass="linkButton" ajax="false" value="Investigation List" action="/dataAdmin/lab_investigation_list" onclick="onSubmitButton();" />
+                            <p:commandButton styleClass="linkButton" ajax="false" value="Investigation Fee List" action="/dataAdmin/lab_investigation_list" onclick="onSubmitButton();" />
                             
                         </p:panel>
 
