--- a/src/main/webapp/hr/hr_staff_leave_entitle.xhtml
+++ b/src/main/webapp/hr/hr_staff_leave_entitle.xhtml
@@ -57,12 +57,12 @@
 
 
                                 <h:outputLabel value="From Date : "/>
-                                <p:calendar id="frmDate" value="#{staffLeaveEntitleController.current.fromDate}" pattern="dd/MM/yy">
+                                <p:calendar navigator="true" id="frmDate" value="#{staffLeaveEntitleController.current.fromDate}" pattern="dd/MM/yy">
                                     <f:ajax execute="@this frmDate" event="dateSelect" render="stfDetail" listener="#{staffLeaveEntitleController.completeStaffDetail}"/>
                                 </p:calendar>
                                 
                                 <h:outputLabel value="To Date : "/>
-                                <p:calendar value="#{staffLeaveEntitleController.current.toDate}" pattern="dd/MM/yy">
+                                <p:calendar navigator="true" value="#{staffLeaveEntitleController.current.toDate}" pattern="dd/MM/yy">
                                     <!--<f:ajax execute="@this" event="dateSelect" render="to" />-->
                                 </p:calendar>
                                 
