Refering doctor in opd bill for ruhunu hospital Signed-off-by: HNDITDushan <s.t.dushan@mail.com>

--- a/src/main/webapp/admin_doctor.xhtml
+++ b/src/main/webapp/admin_doctor.xhtml
@@ -58,6 +58,8 @@
                                     <p:inputText autocomplete="off" value="#{doctorController.current.person.mobile}"  />
                                     <h:outputText  value="Address" />
                                     <p:inputText autocomplete="off" value="#{doctorController.current.person.address}"  />
+                                    <h:outputText  value="Code" />
+                                    <p:inputText autocomplete="off" value="#{doctorController.current.code}"  />
                                     <h:outputText value="Speciality" />
                                     <h:selectOneListbox size="1" value="#{doctorController.current.speciality}" >
                                         <f:selectItem itemLabel="Please select a speciality"/>
