--- a/src/main/webapp/reportLab/report_lab_by_refering_doctor.xhtml
+++ b/src/main/webapp/reportLab/report_lab_by_refering_doctor.xhtml
@@ -17,7 +17,7 @@
                     <f:facet name="header" >
                         <p:outputLabel value="Report by Refering Doctor"/>
                     </f:facet>
-                    
+
 
                     <h:panelGrid columns="2">
                         <h:outputLabel value="From Date"/>
@@ -39,94 +39,101 @@
                         <p:autoComplete value="#{commonReport1.department}"
                                         completeMethod="#{departmentController.completeDept}"
                                         var="dept"
-                                        required="true"
                                         itemLabel="#{dept.name}"
                                         itemValue="#{dept}"
-                                        converter="departmentConverter"
                                         style="width: 400px;"></p:autoComplete>
 
                     </h:panelGrid>
                     <h:panelGrid columns="4">
                         <p:spacer height="1" width="110"/>
                         <p:commandButton value="Process"
-                                     ajax="false" style="float: right;"
-                                     styleClass="noPrintButton"
-                                     action="#{commonReport1.listBillItemsByReferringDoctor}"
-                                     />
-                    <p:commandButton ajax="false" value="Print"  styleClass="noPrintButton" style="float: right;" >
-                        <p:printer target="panelPrint" />
-                    </p:commandButton>
-                    <p:commandButton value="Excel" ajax="false" styleClass="noPrintButton" style="float: right;">
-                        <pe:exporter type="xlsx" target="tbl" fileName="Report by Referring Doctor"
-                                     facetBackground="#008000" facetFontSize="15" 
-                                     facetFontColor="#FFFFFF" facetFontStyle="BOLD" cellFontColor="#0000FF" cellFontSize="12"  cellFontStyle="NORMAL"  
-                                     fontName="Courier New"  />
-                    </p:commandButton>
+                                         ajax="false" style="float: right;"
+                                         styleClass="noPrintButton"
+                                         action="#{commonReport1.listBillItemsByReferringDoctor}"
+                                         />
+                        <p:commandButton ajax="false" value="Print"  styleClass="noPrintButton" style="float: right;" >
+                            <p:printer target="panelPrint" />
+                        </p:commandButton>
+                        <p:commandButton value="Excel" ajax="false" styleClass="noPrintButton" style="float: right;">
+                            <pe:exporter type="xlsx" target="tbl" fileName="Report by Referring Doctor"
+                                         facetBackground="#008000" facetFontSize="15" 
+                                         facetFontColor="#FFFFFF" facetFontStyle="BOLD" cellFontColor="#0000FF" cellFontSize="12"  cellFontStyle="NORMAL"  
+                                         fontName="Courier New"  />
+                        </p:commandButton>
                     </h:panelGrid>
 
                 </p:panel>
                 <p:panel  id="panelPrint" styleClass="noBorder summeryBorder">
                     <p:dataTable id="tbl" value="#{commonReport1.referralBillItems}" var="d" 
-                                 rows="20"
-                                 paginator="true"
-                                 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                 rowsPerPageTemplate="20, 50, 100" 
+                                 rowStyleClass="#{d.bill.billClassType eq 'CancelledBill' or d.bill.billClassType eq 'RefundBill' ? 'redText':''}" 
                                  >
                         <f:facet name="header">
                             <h:outputLabel value="Requests by Referring Doctor "/>
+                            <p:outputLabel value=" - #{commonReport1.referringDoctor.person.name}" rendered="#{commonReport1.referringDoctor ne null}" />
+                            <br></br>
                             <h:outputLabel value="From " />
                             <h:outputLabel  value="#{commonReport1.fromDate}">
-                                <f:convertDateTime pattern="dd MM yyyy hh:mm a"/>
+                                <f:convertDateTime pattern="yyyy MM dd hh:mm:ss a"/>
                             </h:outputLabel>
                             <h:outputLabel value=" - " />
                             <h:outputLabel value="#{commonReport1.toDate}">
-                                <f:convertDateTime pattern="dd MM yyyy  hh:mm a"/>
+                                <f:convertDateTime pattern="yyyy MM dd hh:mm:ss a"/>
                             </h:outputLabel>
                         </f:facet>
 
-                        <p:column headerText="Referring Doctor" rendered="#{commonReport1.referringDoctor ne null}" >
-                            <f:facet name="header">
-                                <h:outputLabel value="Referring Doctor" />
-                            </f:facet>
-                            <h:outputLabel value="#{commonReport1.referringDoctor.person.nameWithTitle}"/>
-                        </p:column>
-
                         <p:column headerText="Bill No" 
-                                  sortBy="#{d.bill.insId}" 
-                                  filterBy="#{d.bill.insId}"
-                                  filterMatchMode="contains">
+                                  sortBy="#{d.bill.insId}">
                             <f:facet name="header">
                                 <h:outputLabel value="Bill No"/>
                             </f:facet>
                             <h:outputLabel value="#{d.bill.insId}"/>
+                            <h:outputLabel value=" - #{d.bill.billedBill.insId}" rendered="#{d.bill.billedBill ne null}"/>
+                            <f:facet name="footer">
+                                <h:outputLabel value="Total"/>
+                            </f:facet>
                         </p:column>
 
+                        <p:column headerText="Referring Doctor" rendered="#{commonReport1.referringDoctor eq null}" >
+                            <f:facet name="header">
+                                <h:outputLabel value="Referring Doctor" />
+                            </f:facet>
+                            <h:outputLabel value="#{d.bill.referredBy.person.name}"/>
+                        </p:column>
+
+
                         <p:column headerText="Date/Time" 
-                                  sortBy="#{d.bill.createdAt}" 
-                                  filterBy="#{d.bill.createdAt}"
-                                  filterMatchMode="contains">
+                                  sortBy="#{d.bill.createdAt}">
                             <f:facet name="header">
                                 <h:outputLabel value="Date/Time"/>
                             </f:facet>
                             <h:outputLabel value="#{d.bill.createdAt}">
-                                <f:convertDateTime pattern="dd-MMM-yy hh:mm a" ></f:convertDateTime>
+                                <f:convertDateTime pattern="yyyy MMM dd hh:mm a" ></f:convertDateTime>
                             </h:outputLabel>
                         </p:column>
 
 
-                        <p:column headerText="Request" >
+                        <p:column headerText="Item" sortBy="#{d.item.name}">
                             <f:facet name="header">
-                                <h:outputLabel value="Request"/>
+                                <h:outputLabel value="Item"/>
                             </f:facet>
                             <h:outputLabel value="#{d.item.name}">
                             </h:outputLabel>
                         </p:column>
 
-
+                        <p:column headerText="Net Value" styleClass="numberCol" >
+                            <f:facet name="header">
+                                <h:outputLabel value="Net Value"/>
+                            </f:facet>
+                            <h:outputLabel value="#{d.netValue}">
+                                <f:convertNumber pattern="#,###,##0.00" />
+                            </h:outputLabel>
+                            <f:facet name="footer">
+                                <h:outputLabel  value="#{commonReport1.biledBillsTotal}" style="float: right;">
+                                    <f:convertNumber pattern="#,###,##0.00" />
+                                </h:outputLabel>
+                            </f:facet>
+                        </p:column>
                     </p:dataTable>
-
-
-
                 </p:panel>        
             </h:form>
         </h:panelGroup>
