Signed-off-by: SVR <wgspriyanka@gmail.com>

--- a/src/main/webapp/channel/channel_booking_past.xhtml
+++ b/src/main/webapp/channel/channel_booking_past.xhtml
@@ -650,6 +650,7 @@
                                 </p:inputText>
                                 <p:outputLabel value="Mark As Absent"/>
                                 <p:selectBooleanCheckbox value="#{bookingPastController.selectedBillSession.absent}" >
+                                    <p:ajax process="@this" event="change" listener="#{bookingPastController.listnerMarkAbsent}" />
                                 </p:selectBooleanCheckbox>
 
                                 <p:commandButton ajax="false" value="Update Serial" action="#{bookingPastController.updateSerial()}"
@@ -824,7 +825,7 @@
                                     <h:panelGrid columns="1">
                                         <p:commandButton value="All Patient" action="channel_patient_view_today" ajax="false" onclick="onSubmitButton();">                                        
                                         </p:commandButton>
-                                        <p:commandButton value="All Doctor" action="channel_doctor_view_today" actionListener="#{channelReportController.createTotalDoctor}" ajax="false" onclick="onSubmitButton();">                                        
+                                        <p:commandButton value="All Doctor" action="channel_doctor_view_past" actionListener="#{channelReportController.createTotalDoctor(bookingPastController.date)}" ajax="false" onclick="onSubmitButton();">                                        
                                         </p:commandButton>
                                         <p:commandButton value="All Absent" action="channel_absent_view_today" actionListener="#{channelReportController.createTodayAbsentList()}" ajax="false" onclick="onSubmitButton();">     
                                             <f:setPropertyActionListener value="#{bookingPastController.date}" target="#{channelReportController.date}"/>
