--- a/src/main/webapp/channel/channel_report_agent_channels.xhtml
+++ b/src/main/webapp/channel/channel_report_agent_channels.xhtml
@@ -95,6 +95,12 @@
                         </p:column>
                         <p:column>
                             <f:facet name="header">
+                                <p:outputLabel value="Consultant" />
+                            </f:facet>
+                            <p:outputLabel value="#{b.staff.person.name}" />
+                        </p:column>
+                        <p:column>
+                            <f:facet name="header">
                                 <p:outputLabel value="C / R" />
                             </f:facet>
                             <p:outputLabel value="Cancel - " rendered="#{b.cancelled}" style="color: red;"/>
